--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^11.2.6"
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/react-hooks": "^5.1.2"
   }
 }
